--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,8 @@
-<mat-toolbar color="primary">
-  <mat-icon svgIcon="icon"></mat-icon><span>Media Organizer</span>
+<mat-toolbar>
+  <mat-icon svgIcon="icon"></mat-icon>
+  <span>Media Organizer</span>
 </mat-toolbar>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
