--- a/front/src/app/category-card/category-card.component.html
+++ b/front/src/app/category-card/category-card.component.html
@@ -1,4 +1,4 @@
-<a class="no-decoration">
+<a class="no-decoration smooth-transition">
   <mat-card class="smooth-transition center">
     <mat-card-header>
       <mat-card-title>{{category.name}}</mat-card-title>
