--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,10 +1,12 @@
 <div class="fill-center">
   <div class="container">
     <div id="addResource">
-      <button mat-raised-button>
-        <mat-icon svgIcon="add" class="space-left-right"></mat-icon>
-        <span class="space-left-right">Ajouter une ressource</span>
-      </button>
+      <a [routerLink]="['/media-organizer/add']">
+        <button mat-raised-button>
+          <mat-icon svgIcon="add" class="space-left-right"></mat-icon>
+          <span class="space-left-right">Ajouter une ressource</span>
+        </button>
+      </a>
     </div>
     <section class="center">
       <category-card [category]="category" *ngFor="let category of categories"></category-card>
