--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -3,6 +3,10 @@ html, body {
   margin: 0;
 }
 
+* {
+  font-family: 'Roboto Light', sans-serif;
+}
+
 .center {
   height: 100%;
   display: flex;
@@ -10,6 +14,10 @@ html, body {
   justify-content: center;
   text-align: center;
   flex-direction: column;
+}
+
+.center .mat-tab-labels {
+  display: block;
 }
 
 .space-left-right {
@@ -37,4 +45,12 @@ html, body {
 
 .fill-center {
   flex: auto;
+}
+
+.space-bottom {
+  margin-bottom: 32px;
+}
+
+mat-form-field {
+  width: 100%;
 }
