Suppression d'un item

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar>
-  <mat-icon svgIcon="icon"></mat-icon>
-  <span>Media Organizer</span>
+  <a href="{{location.getBaseHref()}}">
+    <mat-icon svgIcon="icon"></mat-icon>
+    <span>Media Organizer</span>
+  </a>
 </mat-toolbar>
 
 <div class="container">
