--- a/front/src/app/items-list/online-video-list/online-video-list.component.html
+++ b/front/src/app/items-list/online-video-list/online-video-list.component.html
@@ -1,2 +1,2 @@
 <h1>Vidéos en ligne</h1>
-<resource-list [resources]="newResources" [columns]="columns" [profile]="'links'"></resource-list>
+<resource-list [resources]="newResources" [columns]="columns" [profile]="'links'" [service]="onlineVideoService"></resource-list>
