--- a/front/src/app/add-resource/add-resource.component.html
+++ b/front/src/app/add-resource/add-resource.component.html
@@ -8,7 +8,7 @@
         <mat-icon svgIcon="note"></mat-icon>
         Note
       </ng-template>
-      <note-form (cancel)="goToHome()"></note-form>
+      <note-form></note-form>
     </mat-tab>
     <mat-tab>
       <ng-template mat-tab-label>
@@ -16,7 +16,7 @@
         <mat-icon svgIcon="dailymotion"></mat-icon>
         Vidéo en ligne
       </ng-template>
-      <online-video-form (cancel)="goToHome()"></online-video-form>
+      <online-video-form></online-video-form>
     </mat-tab>
   </mat-tab-group>
 </div>
