--- a/front/src/app/shared/form/online-video/online-video-form.component.html
+++ b/front/src/app/shared/form/online-video/online-video-form.component.html
@@ -19,9 +19,14 @@
       </tr>
     </table>
   </form>
+
 </mat-dialog-content>
 
 <mat-dialog-actions>
+  <mat-error *ngIf="error">
+    {{error}}
+  </mat-error>
   <button mat-button type="button" (click)="cancel()">Annuler</button>
-  <button mat-button color="primary" type="submit" [disabled]="form.invalid">Ajouter</button>
+  <button *ngIf="isUpdateMode"  mat-button color="primary" type="submit" [disabled]="form.invalid" (click)="updateOnlineVideo(form.get('id')?.value, form.value)">Mettre à jour la vidéo</button>
+  <button *ngIf="!isUpdateMode"  mat-button color="primary" type="submit" [disabled]="form.invalid" (click)="addOnlineVideo(form.value)">Ajouter la vidéo</button>
 </mat-dialog-actions>
