--- a/front/src/app/shared/resource-list/resource-list.component.html
+++ b/front/src/app/shared/resource-list/resource-list.component.html
@@ -1,51 +1,56 @@
-<table [dataSource]="dataSource.data | format" mat-table class="mat-elevation-z8" multiTemplateDataRows>
-  <ng-container matColumnDef="{{column.key}}" *ngFor="let column of columns | keyvalue">
-    <th mat-header-cell *matHeaderCellDef> {{column.value}} </th>
-    <td mat-cell *matCellDef="let resource"> {{resource[column.key]}} </td>
-  </ng-container>
+<div *ngIf="resources.length">
+  <table [dataSource]="dataSource | formatDataSource" mat-table class="mat-elevation-z8" multiTemplateDataRows>
+    <ng-container matColumnDef="{{column.key}}" *ngFor="let column of columns | keyvalue">
+      <th mat-header-cell *matHeaderCellDef> {{column.value}} </th>
+      <td mat-cell class="clickable" *matCellDef="let resource"> {{resource[column.key]}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="preview">
-    <th mat-header-cell *matHeaderCellDef> Afficher</th>
-    <td mat-cell *matCellDef="let resource">
-      <a href="{{getViewUrl(resource.id)}}">
-        <mat-icon svgIcon="preview"></mat-icon>
-      </a>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="preview">
+      <th mat-header-cell *matHeaderCellDef> Afficher</th>
+      <td mat-cell *matCellDef="let resource">
+        <a href="{{getViewUrl(resource.id)}}">
+          <mat-icon svgIcon="preview"></mat-icon>
+        </a>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef> Modifier</th>
-    <td mat-cell *matCellDef="let resource">
-      <a href="{{getEditUrl(resource.id)}}">
-        <mat-icon svgIcon="edit"></mat-icon>
-      </a>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef> Modifier</th>
+      <td mat-cell *matCellDef="let resource">
+        <a href="{{getEditUrl(resource.id)}}">
+          <mat-icon svgIcon="edit"></mat-icon>
+        </a>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef> Supprimer</th>
-    <td mat-cell *matCellDef="let resource">
-      <a href="{{getDeleteUrl(resource.id)}}">
-       <mat-icon svgIcon="delete"></mat-icon>
-      </a>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef> Supprimer</th>
+      <td mat-cell *matCellDef="let resource">
+        <a (click)="delete(resource)" class="clickable">
+          <mat-icon svgIcon="delete"></mat-icon>
+        </a>
+      </td>
+    </ng-container>
 
 
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let resource" [attr.colspan]="(columns | numkeys) + 3">
-      <div class="resource-detail center" [@expansion]="resource == expandedResource ? 'expanded' : 'collapsed'">
-        <div>
-          <div class="resource-descriptor" [innerHTML]="trust(resource)"></div>
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let resource" [attr.colspan]="(columns | numkeys) + 3">
+        <div class="resource-detail center" [@expansion]="resource == expandedResource ? 'expanded' : 'collapsed'">
+          <div>
+            <div class="resource-descriptor" [innerHTML]="trust(resource)"></div>
+          </div>
         </div>
-      </div>
-    </td>
-  </ng-container>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="(columns | keys).concat([ 'preview','edit', 'delete',])"></tr>
-  <tr mat-row *matRowDef="let resource; columns: (columns | keys).concat(['preview', 'edit', 'delete']);"
-      class="resource-row"
-      [class.expanded-resource-row]="expandedResource === resource" (click)="showResource(resource)"></tr>
-  <tr mat-row *matRowDef="let resourceRow; columns: ['expandedDetail']" class="list-row"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="(columns | keys).concat([ 'preview','edit', 'delete',])"></tr>
+    <tr mat-row *matRowDef="let resource; columns: (columns | keys).concat(['preview', 'edit', 'delete']);"
+        class="resource-row"
+        [class.expanded-resource-row]="expandedResource === resource" (click)="showResource(resource)"></tr>
+    <tr mat-row *matRowDef="let resourceRow; columns: ['expandedDetail']" class="list-row"></tr>
+  </table>
+</div>
+<div *ngIf="!resources.length">
+  <h1>Aucune ressource à afficher</h1>
+</div>
 
