--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -7,6 +7,15 @@ html, body {
   font-family: 'Roboto Light', sans-serif;
 }
 
+a, a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
 .center {
   height: 100%;
   display: flex;
