--- a/front/src/app/shared/form/note-form/note-form.component.html
+++ b/front/src/app/shared/form/note-form/note-form.component.html
@@ -1,28 +1,37 @@
-<mat-dialog-content>
-  <form novalidate [formGroup]="form">
-    <table>
-      <tr>
-        <td>
-          <mat-form-field>
-            <input matInput autocomplete="disabled" placeholder="Nom de la note" formControlName="name" required name="name" />
-            <mat-error *ngIf="form.get('name')?.dirty && form.get('name')?.hasError('required')">
-              Le nom de la note ne peut pas être <strong>vide</strong>
-            </mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <textarea matInput autocomplete="disabled" placeholder="Contenu de la note" formControlName="content" name="content"></textarea>
-          </mat-form-field>
-        </td>
-      </tr>
-    </table>
-  </form>
-</mat-dialog-content>
+<div *ngIf="!(error && isUpdateMode && isNotFound(error))" class="center">
+  <h1 *ngIf="isUpdateMode">
+    Mettre à jour une note
+  </h1>
+  <mat-dialog-content>
+    <form novalidate [formGroup]="form">
+      <input type="hidden" *ngIf="model.id !== undefined" value="{{model?.id}}" />
+      <table>
+        <tr>
+          <td>
+            <mat-form-field>
+              <input matInput autocomplete="disabled" placeholder="Nom de la note" formControlName="name" required name="name" />
+              <mat-error *ngIf="form.get('name')?.dirty && form.get('name')?.hasError('required')">
+                Le nom de la note ne peut pas être <strong>vide</strong>
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+              <textarea matInput autocomplete="disabled" placeholder="Contenu de la note" formControlName="content" name="content"></textarea>
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
+    </form>
+  </mat-dialog-content>
 
-<mat-dialog-actions>
-  <mat-error *ngIf="error">
-    {{error}}
-  </mat-error>
-  <button mat-button type="button" (click)="cancel()">Annuler</button>
-  <button *ngIf="isUpdateMode"  mat-button color="primary" type="submit" [disabled]="form.invalid" (click)="updateNote(form.get('id')?.value, form.value)">Mettre à jour la note</button>
-  <button *ngIf="!isUpdateMode"  mat-button color="primary" type="submit" [disabled]="form.invalid" (click)="addNote(form.value)">Ajouter la note</button>
-</mat-dialog-actions>
+  <mat-dialog-actions>
+    <mat-error *ngIf="error">
+      {{error}}
+    </mat-error>
+    <button mat-button type="button" (click)="cancel()">Annuler</button>
+    <button *ngIf="isUpdateMode"  mat-button color="primary" type="submit" [disabled]="form.invalid" (click)="updateNote(form.get('id')?.value, form.value)">Mettre à jour la note</button>
+    <button *ngIf="!isUpdateMode"  mat-button color="primary" type="submit" [disabled]="form.invalid" (click)="addNote(form.value)">Ajouter la note</button>
+  </mat-dialog-actions>
+</div>
+<div *ngIf="error && isUpdateMode && isNotFound(error)" class="center">
+  <h1>La note recherchée pour modification n'existe pas</h1>
+</div>
