Première liaison entre le front et le back (pas encore fonctionnel)

--- a/front/src/app/items-list/note-list/note-list.component.html
+++ b/front/src/app/items-list/note-list/note-list.component.html
@@ -1,2 +1,2 @@
 <h1>Notes</h1>
-<resource-list [resources]="newResources" [columns]="columns" [profile]="'notes'" [service]="noteService"></resource-list>
+<resource-list [resources]="resources"></resource-list>
