Recherche et affichage des items dans la BDD

--- a/front/src/app/items-list/note-list/note-list.component.html
+++ b/front/src/app/items-list/note-list/note-list.component.html
@@ -1,2 +1,2 @@
 <h1>Notes</h1>
-<resource-list [resources]="resources"></resource-list>
+<resource-list [resources]="resources" [columns]="columns"></resource-list>
