--- a/front/src/app/shared/form/note-form/note-form.component.html
+++ b/front/src/app/shared/form/note-form/note-form.component.html
@@ -15,7 +15,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field>
-              <textarea matInput autocomplete="disabled" placeholder="Contenu de la note" formControlName="content" name="content"></textarea>
+              <textarea matInput autocomplete="disabled" placeholder="Contenu de la note" formControlName="note" name="content"></textarea>
             </mat-form-field>
           </td>
         </tr>
