Liaison front et back pour la modification (bug sur les vidéos)

--- a/front/src/app/shared/form/note-form/note-form.component.html
+++ b/front/src/app/shared/form/note-form/note-form.component.html
@@ -4,7 +4,7 @@
   </h1>
   <mat-dialog-content>
     <form novalidate [formGroup]="form">
-      <input type="hidden" *ngIf="model.id !== undefined" value="{{model?.id}}" />
+      <input type="hidden" formControlName="id" name="id" *ngIf="model.id !== undefined" value="{{model?.id}}" />
       <table>
         <tr>
           <td>
