Ajout du formulaire d'ajout de fichier sur la page d'ajout globale

--- a/front/src/app/add-resource/add-resource.component.html
+++ b/front/src/app/add-resource/add-resource.component.html
@@ -17,5 +17,12 @@
       </ng-template>
       <online-video-form></online-video-form>
     </mat-tab>
+    <mat-tab>
+      <ng-template mat-tab-label>
+        <mat-icon svgIcon="file_upload"></mat-icon>
+        Fichier
+      </ng-template>
+      <document-form></document-form>
+    </mat-tab>
   </mat-tab-group>
 </div>
