--- a/front/src/app/shared/form/file-form/document-form.component.html
+++ b/front/src/app/shared/form/file-form/document-form.component.html
@@ -9,7 +9,7 @@
         <tr>
           <td>
             <mat-form-field>
-              <input matInput autocomplete="disabled" placeholder="Nom du fichier" formControlName="name" required name="name" />
+              <input matInput autocomplete="disabled" placeholder="Nom de la ressource" formControlName="name" required name="name" />
               <mat-error *ngIf="form.get('name')?.dirty && form.get('name')?.hasError('notEmpty')">
                 Le nom du fichier ne peut pas être <strong>vide</strong>
               </mat-error>
